# tema7

./: .gitignore  CMakeLists.txt  Database.c  Database.h  Datatypes.h  DebugFunctions.c  DebugFunctions.h  Functionality.c  Functionality.h  README.md  Utils.c  Utils.h  main.c
Database/: Database.c  Database.h  Utils.c  Utils.h
Model/: Datatypes.c  Datatypes.h
View/: DebugFunctions.c  DebugFunctions.h  InputFunctions.c  InputFunctions.h  View.c  View.h
kursovaya/: CMakeLists.txt  bot.cpp  main.cpp  stuff.h
tema7/: CMakeLists.txt  main.c
tema7/Database/: Database.c  Database.h
tema7/Generator/: CMakeLists.txt  deps.txt  lastnames.txt  main.cpp  pos.txt
tema7/Model/: Datatypes.c
tema7/View/: DebugFunctions.h  View.c  View.h
tema8/: CMakeLists.txt  main.cpp
tema9/: .gitignore  CMakeLists.txt  main.c
tema9/BinTree/: Tree.c  Tree.h
tema9/Database/: Database.c  Database.h  Utils.c  Utils.h
tema9/Generator/: CMakeLists.txt  Jobs  database.db  eds.txt
tema9/LinkedList/: LinkedList.c  LinkedList.h
tema9/Model/: Datatypes.h
tema9/Sort/: Sort.c  Sort.h
tema9/View/: DebugFunctions.c  DebugFunctions.h  Input.c  Input.h  Sort.c  Sort.h  View.c  View.h
